<resources>
    <string name="app_name">Inventory</string>
    <string name="new_product">New Product</string>

    <!--activity_main.xml-->
    <string name="empty_view_subtitle_text">Your inventory is empty</string>
    <!--MainActivity-->
    <string name="update_product_failed">Error updating product</string>
    <string name="update_product_successful">Product updated</string>
    <string name="delete_product_failed">Error with deleting product</string>
    <string name="delete_product_successful">Product deleted</string>

    <!--dialog_add_product.xml-->
    <string name="add_dialog_title">New Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product_info_not_empty">Please fill out all the required information</string>

    <!--item_list_cardview.xml-->
    <string name="default_product_name">Product</string>
    <string name="list_product_quantity_title">Quantity:</string>
    <string name="default_product_quantity">0</string>
    <string name="product_price_title">Price ($):</string>
    <string name="default_product_price">999.90</string>
    <string name="btn_sell_product">Sell Product</string>

    <!--include_content_edit.xml-->
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>

    <!--Email-->
    <string name="hi">Hi,</string>
    <string name="message">I would like to order the product:</string>
    <string name="product_name_title">Product name:</string>
    <string name="thank">Thanks!</string>

    <!--activity_detail_edit.xml: Does not use string-->

    <string name="sell_product_failed">The product is sold out! :(</string>
    <string name="email_subject">Order for</string>

    <string name="edit_activity_name_title">Name:</string>
    <string name="edit_activity_price_title">Price:</string>
    <string name="edit_activity_quantity_title">Quantity available:</string>
    <string name="edit_activity_title">Edit Product</string>

    <!--DetailEditActivity-->
    <string name="delete_dialog_title">Delete this product?</string>
</resources>
