<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.DetailEditActivity"
    tools:showIn="@layout/activity_detail_edit"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/edit_activity_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_detail_edit"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_activity_name_title"
            >
            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                tools:text="Product"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price_title"
            >
            <EditText
                android:id="@+id/editPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="999.0"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_activity_quantity_title"
            >
            <EditText
                android:id="@+id/textQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="1"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:layout_marginTop="@dimen/edit_activity_margin"
            android:background="@android:color/holo_green_light"
            android:onClick="onSaveOnClick"
            android:text="@string/btn_save"
            android:drawableLeft="@android:drawable/ic_menu_save"
            />
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:layout_marginTop="@dimen/edit_activity_margin"
            android:background="@android:color/holo_red_dark"
            android:onClick="onDeleteOnClick"
            android:text="@string/btn_delete"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            />


    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
